# matrixbot

./: Cargo.toml  README.md  config.env
src/: bot.rs  main.rs  test.py  utils.rs
