[package]
name = "matrixbot"
version = "0.1.0"
edition = "2021"
description = "A helper app to manage Matrix instance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0", features = ["derive"]}
reqwest = {version = "0.11", features = ["blocking"]}
hmac = "0.12"
sha-1 = "0.10"
serde_json = "1.0"
regex = "1.5"
markdown = "0.3"
urlencoding = "2.1"
